--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 
     <div class="background">
-      <div class="container">
+      <div class="container car-bg">
         <div
           id="carouselExampleIndicators"
           class="carousel slide"
@@ -77,25 +77,64 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img
-                src="banner-products/product-1.png"
-                class="d-block w-100"
-                alt="..."
-              />
+              <div class="row d-flex align-items-center">
+                <div class="col-md-6">
+                  <h1>Mackbook Pro</h1>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Repellendus minus autem consequuntur et ut atque
+                    reprehenderit exercitationem nihil cumque. Inventore.
+                  </p>
+                  <button class="buynow">BUY NOW →</button>
+                </div>
+                <div class="col-md-6">
+                  <img
+                    src="banner-products/product-1.png"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+              </div>
             </div>
             <div class="carousel-item">
-              <img
-                src="banner-products/slider-1.png"
-                class="d-block w-100"
-                alt="..."
-              />
+              <div class="row d-flex align-items-center">
+                <div class="col-md-6">
+                  <h1>Home Assistant Pro</h1>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Repellendus minus autem consequuntur et ut atque
+                    reprehenderit exercitationem nihil cumque. Inventore.
+                  </p>
+                  <button class="buynow">BUY NOW →</button>
+                </div>
+                <div class="col-md-6">
+                  <img
+                    src="banner-products/slider-1.png"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+              </div>
             </div>
             <div class="carousel-item">
-              <img
-                src="banner-products/slider-3.png"
-                class="d-block w-100"
-                alt="..."
-              />
+              <div class="row d-flex align-items-center">
+                <div class="col-md-6">
+                  <h1>JBL Bluetooth Speaker</h1>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Repellendus minus autem consequuntur et ut atque
+                    reprehenderit exercitationem nihil cumque. Inventore.
+                  </p>
+                  <button class="buynow">BUY NOW →</button>
+                </div>
+                <div class="col-md-6">
+                  <img
+                    src="banner-products/slider-3.png"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+              </div>
             </div>
           </div>
           <button
