--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="row d-flex align-items-center">
-                <div class="col-md-6">
+                <div class="col-md-6 banner">
                   <h1>Mackbook Pro</h1>
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -98,7 +98,7 @@
             </div>
             <div class="carousel-item">
               <div class="row d-flex align-items-center">
-                <div class="col-md-6">
+                <div class="col-md-6 banner">
                   <h1>Home Assistant Pro</h1>
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -118,7 +118,7 @@
             </div>
             <div class="carousel-item">
               <div class="row d-flex align-items-center">
-                <div class="col-md-6">
+                <div class="col-md-6 banner">
                   <h1>JBL Bluetooth Speaker</h1>
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -155,6 +155,66 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="d-flex justify-content-between">
+        <h3>Smartphone</h3>
+        <a href="" class="seeall"><h5>See All</h5></a>
+      </div>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img src="phone/phone-1.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Vivo V70 Pro</h5>
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+              <h5>$499</h5>
+            </div>
+            <div class="card-footer">
+              <button class="buynow">BUY NOW →</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="phone/phone-2.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">iPhone 13 Pro</h5>
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+              <h5>$999</h5>
+            </div>
+            <div class="card-footer">
+              <button class="buynow">BUY NOW →</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="phone/phone-3.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Samsung Galaxy Note 10</h5>
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+              <h5>$799</h5>
+            </div>
+            <div class="card-footer">
+              <button class="buynow">BUY NOW →</button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
