More Products Added

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             id="navbarNavAltMarkup"
           >
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="">Home</a>
               <a class="nav-link" href="products">Products</a>
               <a class="nav-link" href="categories">Categories</a>
               <a class="nav-link" href="contact">Contact Us</a>
@@ -159,8 +159,8 @@
       </div>
     </div>
 
-    <div class="container">
-      <div class="d-flex justify-content-between">
+    <div class="container con">
+      <div class="d-flex justify-content-between con1">
         <h3>Smartphone</h3>
         <a href="" class="seeall"><h5>See All</h5></a>
       </div>
@@ -210,6 +210,66 @@
                 longer.
               </p>
               <h5>$799</h5>
+            </div>
+            <div class="card-footer">
+              <button class="buynow">BUY NOW →</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container con">
+      <div class="d-flex justify-content-between con1">
+        <h3>Laptop</h3>
+        <a href="" class="seeall"><h5>See All</h5></a>
+      </div>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img src="laptop/product-1.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Asus Vivobook</h5>
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+              <h5>$999</h5>
+            </div>
+            <div class="card-footer">
+              <button class="buynow">BUY NOW →</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="laptop/product-2.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Razer Blade 15</h5>
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+              <h5>$1999</h5>
+            </div>
+            <div class="card-footer">
+              <button class="buynow">BUY NOW →</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="laptop/product-3.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Mi Notebook Pro</h5>
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+              <h5>$999</h5>
             </div>
             <div class="card-footer">
               <button class="buynow">BUY NOW →</button>
