--- a/index.html
+++ b/index.html
@@ -279,6 +279,32 @@
       </div>
     </div>
 
+    <div class="cat">
+      <h1>Categories</h1>
+    </div>
+
+    <div class="container">
+      <div class="row d-flex align-items-center cate">
+        <div class="col-md-3 shad1">
+          <img src="Categories/bag.png" alt="" />
+          <h6>Bag</h6>
+        </div>
+        <div class="col-md-3">
+          <div class="shad2">
+            <img src="Categories/perfume.png" alt="" />
+            <h6>Beauty</h6>
+          </div>
+          <div class="shad2">
+            <img src="Categories/shoe.png" alt="" />
+            <h6>Shoes</h6>
+          </div>
+        </div>
+        <div class="col-md-6 shad3">
+          <img src="Categories/pale-order.png" alt="" />
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
