--- a/index.html
+++ b/index.html
@@ -305,6 +305,18 @@
       </div>
     </div>
 
+    <div
+      class="container banner-bg d-flex justify-content-center align-items-center"
+      id="register"
+    >
+      <div>
+        <h2>Let's stay in touch</h2>
+        <h6>Get updates on sales and special offers</h6>
+        <input class="form-control" type="text" value="Enter Your Thoughts" />
+        <button class="buynow">Submit</button>
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
