Footer Added & Overall Edited

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
           >
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="">Home</a>
-              <a class="nav-link" href="products">Products</a>
-              <a class="nav-link" href="categories">Categories</a>
-              <a class="nav-link" href="contact">Contact Us</a>
+              <a class="nav-link" href="#products">Products</a>
+              <a class="nav-link" href="#categories">Categories</a>
+              <a class="nav-link" href="#register">Contact Us</a>
             </div>
           </div>
         </div>
@@ -159,7 +159,7 @@
       </div>
     </div>
 
-    <div class="container con">
+    <div class="container con" id="products">
       <div class="d-flex justify-content-between con1">
         <h3>Smartphone</h3>
         <a href="" class="seeall"><h5>See All</h5></a>
@@ -279,11 +279,10 @@
       </div>
     </div>
 
-    <div class="cat">
-      <h1>Categories</h1>
-    </div>
-
-    <div class="container">
+    <div class="container" id="categories">
+      <div class="cat">
+        <h1>Categories</h1>
+      </div>
       <div class="row d-flex align-items-center cate">
         <div class="col-md-3 shad1">
           <img src="Categories/bag.png" alt="" />
@@ -316,6 +315,10 @@
         <button class="buynow">Submit</button>
       </div>
     </div>
+
+    <footer class="d-flex justify-content-center">
+      <small>©2022. Hot Gadgets. All rights reserved.</small>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
